syntax = "proto3";

package infrastructure.rpc.order.v1.model.v1;

option go_package = "github.com/shortlink-org/shortlink/boundaries/shop/oms/internal/infrastructure/rpc/order/v1/model/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "domain/order/v1/event.proto";

// Define the Order message
message OrderState {
  // Unique identifier for the order
  string id = 1;
  // Identifier for the customer who placed the order
  string customer_id = 2;
  // List of items in the order
  repeated OrderItem items = 3;
  // Current status of the order
  domain.order.v1.OrderStatus status = 4;
  // Timestamp for when the order was created
  google.protobuf.Timestamp created_at = 5;
  // Timestamp for when the order was last updated
  google.protobuf.Timestamp updated_at = 6;
}

// Define the OrderItem message
message OrderItem {
  // Unique identifier for the item
  string id = 1;
  // Quantity of the item ordered
  int32 quantity = 2;
  // Price of a single item
  double price = 3;
}

// Request message for creating an order
message CreateRequest {
  // Order details
  OrderState order = 1;
}

// Request message for getting an order by ID
message GetRequest {
  // ID of the order to retrieve
  string id = 1;
}

// Response message for getting an order by ID
message GetResponse {
  // Retrieved order details
  OrderState order = 1;
}

// Request message for updating an order
message UpdateRequest {
  // Updated order details
  OrderState order = 1;
  // Fields to update
  google.protobuf.FieldMask update_mask = 2;
}

// Request message for deleting an order by ID
message CancelRequest {
  // ID of the order to delete
  string id = 1;
}
